--- a/ajout_pharma.html
+++ b/ajout_pharma.html
@@ -63,19 +63,40 @@
 	    </nav>
 	  </div> 
 	    <div class="page-content">	
-			<!--<div class="mdl-grid bg_search">
+			<div class="mdl-grid bg_search">
 			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
 				<div class="search">
 				    <i class="material-icons blue_color">search</i>
 				    <input type="text" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
 				</div>
+		<table id="search_options_container" class="table_center" style="display: none">
+	        <tr><td class="search_radio"> 
+			         <label class="mdl-radio mdl-js-radio" for="option_pharma">
+			            <input type="radio" id="option_pharma" name="search_option" class="mdl-radio__button" checked>
+			            <span class="mdl-radio__label">Pharmacie</span>
+			         </label>
+			    </td>
+		      <td class="search_radio">
+		         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect " for="option_hospital">
+		            <input type="radio" id="option_hospital" name="search_option" class="mdl-radio__button" >
+		            <span class="mdl-radio__label">Hopital</span>
+		         </label>
+			  </td> 
+	      </tr>
+	   </table> 
 			  </div>
-			</div>	-->
+			</div>
 	    </div>		  
 	  <main class="mdl-layout__content">
-	    <div class="page-content">	
+	    <div class="page-content mdl-container">	
 			
-			<div class="mdl-grid mdl-container">
+			<!-- START search results-->				 
+			<div id="search_bar_results" class="mdl-layout--large-screen-only mdl-container search_bar_results" style="display: none">
+
+			</div>	
+			<!-- END search results-->
+
+			<div id="_main" class="mdl-grid mdl-container">
 				<h4 class="container_title">Ajouter une pharmacie</h4>
 					<div class="text_container">
 					<div class="mdl-container_text">	
