--- a/comprendre.html
+++ b/comprendre.html
@@ -92,9 +92,13 @@
 	    </div>	 
 		  
 	  <main class="mdl-layout__content">
-	    <div class="page-content">	
-			
-			<div class="mdl-grid mdl-container">
+	    <div class="page-content mdl-container">	
+			<!-- START search results-->				 
+			<div id="search_bar_results" class="mdl-layout--large-screen-only mdl-container search_bar_results" style="display: none">
+
+			</div>	
+			<!-- END search results-->
+			<div id="_main" class="mdl-grid mdl-container">
 				<h4 class="container_title">C'est quoi le paludisme ?</h4>
 					<img src="img/labo.jpg" alt="Laboratoire de campagne" class="full_img" />
 					<div class="text_container">
