--- a/qui.html
+++ b/qui.html
@@ -92,9 +92,13 @@
 	    </div>	 
 		  
 	  <main class="mdl-layout__content">
-	    <div class="page-content">	
-			
-			<div class="mdl-grid mdl-container">
+	    <div class="page-content mdl-container">	
+			<!-- START search results-->				 
+			<div id="search_bar_results" class="mdl-layout--large-screen-only mdl-container search_bar_results" style="display: none">
+
+			</div>	
+			<!-- END search results-->
+			<div id="_main" class="mdl-grid mdl-container">
 				<h4 class="container_title">A propos de EduPalu</h4>
 					<div class="text_container">
 						<div class="mdl-container_text">	
@@ -159,7 +163,7 @@
 			</div>
 
 	    </div>
-	    <div class="page-content mdl-container">	
+	     <div class="page-content mdl-container">	
 			<div class="mdl-grid container">	
 	  			<footer class="mdl-mini-footer mdl-layout--large-screen-only">
 				  <div class="mdl-mini-footer__left-section">
@@ -169,7 +173,7 @@
 				  </div>
 				</footer>	
 			</div>
-	    </div>      
+	    </div>  
 	  </main>
 
 	</div>
