--- a/quiz_play.html
+++ b/quiz_play.html
@@ -73,7 +73,7 @@
 				    <i class="material-icons blue_color">search</i>
 				    <input type="text" id="input_search" name="input_search" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
 				</div>
-		<table id="search_options_container" class="table_center" style="display: none">
+		<!--<table id="search_options_container" class="table_center" style="display: none">
 	        <tr><td class="search_radio"> 
 			         <label class="mdl-radio mdl-js-radio" for="option_pharma">
 			            <input type="radio" id="option_pharma" name="search_option" class="mdl-radio__button" checked>
@@ -87,14 +87,14 @@
 		         </label>
 			  </td> 
 	      </tr>
-	   </table>   
+	   </table>   -->
 
 			  </div>
 			</div>	
 	    </div>	 
 		  
 	  <main class="mdl-layout__content">
-	    <div class="page-content mdl-container">	
+	    <div class="page-content">	
 			<div class="mdl-container_text">
 				<div id="question_header">
 	            <div id="question_nb">
