--- a/se_soigner.html
+++ b/se_soigner.html
@@ -91,9 +91,13 @@
 			</div>	
 	    </div>	    
 	  <main class="mdl-layout__content">
-	    <div class="page-content">	
-			
-			<div class="mdl-grid mdl-container">
+	    <div class="page-content mdl-container">	
+			<!-- START search results-->				 
+			<div id="search_bar_results" class="mdl-layout--large-screen-only mdl-container search_bar_results" style="display: none">
+
+			</div>	
+			<!-- END search results-->
+			<div id="_main" class="mdl-grid mdl-container">
 				<h4 class="container_title">Soigner le paludisme</h4>
 					<img src="img/vaccin.jpg" alt="Vaccin" class="full_img" />
 					<div class="text_container">
@@ -158,7 +162,7 @@
 
 	    </div>
 
-	    <div class="page-content mdl-container">	
+	     <div class="page-content mdl-container">	
 			<div class="mdl-grid container">	
 	  			<footer class="mdl-mini-footer mdl-layout--large-screen-only">
 				  <div class="mdl-mini-footer__left-section">
@@ -168,7 +172,7 @@
 				  </div>
 				</footer>	
 			</div>
-	    </div>    
+	    </div>  
 	  </main>
 
 	</div>
