--- a/ajout_pharma.html
+++ b/ajout_pharma.html
@@ -65,11 +65,11 @@
 	    <div class="page-content">	
 			<div class="mdl-grid bg_search">
 			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
-				<div class="search">
+				<!--<div class="search">
 				    <i class="material-icons blue_color">search</i>
-				    <input type="text" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
-				</div>
-		<table id="search_options_container" class="table_center" style="display: none">
+				    <input type="text" id="input_search" name="input_search" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
+				</div>-->
+		<!--<table id="search_options_container" class="table_center" style="display: none">
 	        <tr><td class="search_radio"> 
 			         <label class="mdl-radio mdl-js-radio" for="option_pharma">
 			            <input type="radio" id="option_pharma" name="search_option" class="mdl-radio__button" checked>
@@ -83,7 +83,7 @@
 		         </label>
 			  </td> 
 	      </tr>
-	   </table> 
+	   </table>   -->
 			  </div>
 			</div>
 	    </div>		  
@@ -144,11 +144,11 @@
 		
 <!-- inclusion  des fichiers javascript -->
 <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-<!-- Bootstrap JavaScript File Include -->
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+
 <script type="text/javascript" src="js/json_query.min.js"></script>
 <script type="text/javascript" src="data/places_db.json"></script>
-<script type="text/javascript" src="js/adresses_search.js"></script>		
+<script type="text/javascript" src="data/places_hospital_db.json"></script>
+<script type="text/javascript" src="js/adresses_search.js"></script>	
 
 </body>
 </html>
