--- a/quiz_play.html
+++ b/quiz_play.html
@@ -69,11 +69,11 @@
 	    <div class="page-content">	
 			<div class="mdl-grid bg_search">
 			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
-				<div class="search">
+				<!--<div class="search">
 				    <i class="material-icons blue_color">search</i>
 				    <input type="text" id="input_search" name="input_search" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
-				</div>
-		<!--<table id="search_options_container" class="table_center" style="display: none">
+				</div>-->
+		<!--<table id="search_options_container" class="table_center">
 	        <tr><td class="search_radio"> 
 			         <label class="mdl-radio mdl-js-radio" for="option_pharma">
 			            <input type="radio" id="option_pharma" name="search_option" class="mdl-radio__button" checked>
@@ -87,14 +87,14 @@
 		         </label>
 			  </td> 
 	      </tr>
-	   </table>   -->
+	   </table>-->   
 
 			  </div>
 			</div>	
 	    </div>	 
 		  
 	  <main class="mdl-layout__content">
-	    <div class="page-content">	
+	    <div class="page-content mdl-container">	
 			<div class="mdl-container_text">
 				<div id="question_header">
 	            <div id="question_nb">
