style: adapte search near pharma into result panel

--- a/adresse_near.html
+++ b/adresse_near.html
@@ -112,7 +112,9 @@
 	                        </div>
 
 	                        <div class="panel-body">
-	                            <div id="results" class="row"></div>
+	                            <div id="results" class="mdl-layout--large-screen-only search_bar_results">
+
+															</div>
 	                        </div>
 	                </div>       
 
