--- a/adresse_near.html
+++ b/adresse_near.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/material.blue-light_blue.min.css" /> 
 	<link rel="stylesheet" href="css/custom.css" /> 
 	<link rel="stylesheet" href="css/adresses.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css">	
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 <body>
