--- a/chasse_para_start.html
+++ b/chasse_para_start.html
@@ -7,9 +7,12 @@
 	<title>Chasse aux parasites, les règles .:. EduPalu</title>
 	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-light_blue.min.css" /> 
+    <link href="css/game_chasse_style.css" rel="stylesheet" />	
+	<link rel="stylesheet" href="css/material.blue-light_blue.min.css" /> 
 	<link rel="stylesheet" href="css/custom.css" /> 
-	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+	<link rel="stylesheet" href="css/adresses.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css">	
+	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>	
 </head>
 <body>
 
