--- a/palu_vous_play.html
+++ b/palu_vous_play.html
@@ -7,8 +7,10 @@
 	<title>le paludisme et vous .:. EduPalu</title>
 	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-light_blue.min.css" /> 
+	<link rel="stylesheet" href="css/material.blue-light_blue.min.css" /> 
 	<link rel="stylesheet" href="css/custom.css" /> 
+	<link rel="stylesheet" href="css/adresses.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css">	
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 <body>
