--- a/chasse_para_play.html
+++ b/chasse_para_play.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/custom.css" /> 
     <link href="css/game_chasse_style.css" rel="stylesheet" />	
     <link href="css/styl.css" rel="stylesheet" />
-
+	<link rel="stylesheet" href="css/font-awesome.min.css">	    
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 <body>
