--- a/palu_vous_play.html
+++ b/palu_vous_play.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-light_blue.min.css" /> 
 	<link rel="stylesheet" href="css/custom.css" /> 
+	<link rel="stylesheet" href="css/font-awesome.min.css">		
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 <body>
