--- a/quiz_play.html
+++ b/quiz_play.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="css/cmaterial-design-iconic-font.css" /> 
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link href="css/quiz_style.css" rel="stylesheet" />
+	<link rel="stylesheet" href="css/font-awesome.min.css">	    
     <script type="text/javascript" src="data/quiz_questions.json"></script>
     <script type="text/javascript" src="js/quiz_engine.js"></script>	
 </head>
