--- a/comment.html
+++ b/comment.html
@@ -142,7 +142,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp drug">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">PublicDomainPictures, Pixabay, <br />Creative Commons 0</span>
+					    <span class="demo-card-image__filename">childre receives ACTs<br />photo par Bonnie Gillespie</span>
 					  </div>
 					</div>	
 			  </div>
@@ -158,7 +158,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp questions">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">DFID, Flickr, <br />Creative Commons BY.</span>
+					    <span class="demo-card-image__filename">vukuzenzele.gov.za</span>
 					  </div>
 					</div>	
 			  </div>
@@ -166,7 +166,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp quiz">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Julien Harneis, Flickr, <br />Creative Commons BY-SA.</span>
+					    <span class="demo-card-image__filename">Checkers<br />Source : www.hoofprint.net</span>
 					  </div>
 					</div>	
 			  </div>
@@ -174,7 +174,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp technicien">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">US Army Africa, Flickr, <br />Creative Commons BY.</span>
+					    <span class="demo-card-image__filename">Malaria parasite <br />Source : www.emedmd.co.</span>
 					  </div>
 					</div>	
 			  </div>
