--- a/palu_vous_start.html
+++ b/palu_vous_start.html
@@ -68,7 +68,7 @@
 			<div class="mdl-grid bg_search">
 			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
 				<div class="search">
-				    <i class="material-icons blue_color">search</i>
+				    <i class="material-icons blue_color fa fa-search"></i>
 				    <input type="text" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
 				</div>
 			  </div>
@@ -112,6 +112,7 @@
 	  </main>
 	</div>
 		
+<script type="text/javascript" src="js/material.min.js"></script>
 
 </body>
 </html>
