--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<title>EduPalu .:. Bienvenue</title>
 	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="css/material.blue-light_blue.min.css" /> 
-	<link rel="stylesheet" href="css/custom.css" /> 
+	<link rel="stylesheet" href="css/material.blue-light_blue.min.css" />
+	<link rel="stylesheet" href="css/custom.css" />
 	<link rel="stylesheet" href="css/adresses.css" />
 	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+	
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -23,12 +23,16 @@
   ga('send', 'pageview');
 
 </script>
-	
+
 </head>
 <body>
 
 	<!-- Always shows a header, even in smaller screens. -->
 	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+		<div aria-expanded="false" role="button" tabindex="0" class="mdl-layout__drawer-button">
+			<i class="fa fa-bars"></i>
+
+		</div>
 	  <header class="mdl-layout__header">
 	    <div class="mdl-layout__header-row">
 	      <!-- Title -->
@@ -50,12 +54,12 @@
 				    for="demo-menu-lower-right">
 				  <li class="mdl-menu__item"><a href="comment.html">Comment</a></li>
 				  <li class="mdl-menu__item"><a href="qui.html">A propos</a></li>
-				</ul>				
-			</div>	      
+				</ul>
+			</div>
 	      <!-- Navigation. We hide it in small screens. -->
 	      <nav class="mdl-navigation mdl-layout--large-screen-only">
 	        <a class="mdl-navigation__link" href="adresse.html">Rechercher une pharmacie/CSi</a>
-	        <a class="mdl-navigation__link" href="adresse_near.html">La plus proche de moi</a>	        
+	        <a class="mdl-navigation__link" href="adresse_near.html">La plus proche de moi</a>
 	        <a class="mdl-navigation__link" href="ajout_pharma.html">Ajouter un centre de santé</a>
 	        <a class="mdl-navigation__link" href="comment.html">Comment ?</a>
 	        <a class="mdl-navigation__link" href="qui.html">A propos</a>
@@ -65,27 +69,44 @@
 	  <div class="mdl-layout__drawer">
 	    <span class="mdl-layout-title"><img src="img/logo2.png" alt=""></span>
 	    <nav class="mdl-navigation">
-	      <a class="mdl-navigation__link" href="comprendre.html"><i class="material-icons">description</i>Comprendre</a>
-	      <a class="mdl-navigation__link" href="se_proteger.html"><i class="material-icons">warning</i>Se protéger</a>
-	      <a class="mdl-navigation__link" href="diagnostiquer.html"><i class="material-icons">find_in_page</i>Diagnostiquer</a>	      
-	      <a class="mdl-navigation__link" href="se_soigner.html"><i class="material-icons">healing</i>Se soigner</a>
-	      <a class="mdl-navigation__link" href="adresse.html"><i class="material-icons">search</i>Rechecher </a>
-	      <a class="mdl-navigation__link" href="question_reponse.html"><i class="material-icons">forum</i>Questions / Réponses</a>
-	      <a class="mdl-navigation__link" href="quiz_play.html"><i class="material-icons">games</i>Le quiz</a>
-	      <a class="mdl-navigation__link" href="chasse_para_start.html"><i class="material-icons">extension</i>Chasse aux parasites</a>	      			     
-	      <a class="mdl-navigation__link" href="comment.html"><i class="material-icons">copyright</i>Comment ?</a>
-	      <a class="mdl-navigation__link" href="qui.html"><i class="material-icons">info</i> A propos</a>
+	      <a class="mdl-navigation__link" href="comprendre.html"><i style="font-size:1.6em;" class="material-icons fa fa-file"></i> Comprendre</a>
+	      <a class="mdl-navigation__link" href="se_proteger.html"><i style="font-size:1.6em;" class="material-icons fa fa-exclamation-triangle"></i> Se protéger</a>
+
+	      <a class="mdl-navigation__link" href="diagnostiquer.html">
+	      	<i style="font-size:1.6em;" class="material-icons fa fa-stethoscope"></i> Diagnostiquer</a>
+
+	      <a class="mdl-navigation__link" href="se_soigner.html">
+			<i style="font-size:1.6em;" class="material-icons fa fa-heart"></i>
+	       Se soigner</a>
+	      <a class="mdl-navigation__link" href="adresse.html">
+			<i style="font-size:1.6em;" class="material-icons fa fa-search"></i>
+	      Rechecher </a>
+	      <a class="mdl-navigation__link" href="question_reponse.html">
+	      	<i style="font-size:1.6em;" class="material-icons fa fa-comments"></i>
+	      Questions / Réponses</a>
+	      <a class="mdl-navigation__link" href="quiz_play.html"><i style="font-size:1.6em;" class="material-icons fa fa-gamepad"></i>
+	      Le quiz</a>
+	      <a class="mdl-navigation__link" href="chasse_para_start.html">
+	      <i style="font-size:1.6em;" class="material-icons fa fa-puzzle-piece"></i>
+	  	Chasse aux parasites</a>
+	      <a class="mdl-navigation__link" href="comment.html">
+	      	<i style="font-size:1.6em;" class="material-icons fa fa-copyright"></i>
+
+	      Comment ?</a>
+	      <a class="mdl-navigation__link" href="qui.html">
+			<i style="font-size:1.6em;" class="material-icons fa fa-info"></i>
+	        A propos</a>
 	    </nav>
-	  </div>  
-	    <div class="page-content">	
+	  </div>
+	    <div class="page-content">
 			<div class="mdl-grid bg_search">
 			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
 				<div class="search">
-				    <i class="material-icons blue_color">search</i>
+				    <i class="material-icons blue_color fa fa-search"></i>
 				    <input type="text" id="input_search" name="input_search" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
 				</div>
 		<table id="search_options_container" class="table_center" style="display: none">
-	        <tr><td class="search_radio"> 
+	        <tr><td class="search_radio">
 			         <label class="mdl-radio mdl-js-radio" for="option_pharma">
 			            <input type="radio" id="option_pharma" name="search_option" class="mdl-radio__button" checked>
 			            <span class="mdl-radio__label">Pharmacie</span>
@@ -96,21 +117,21 @@
 		            <input type="radio" id="option_hospital" name="search_option" class="mdl-radio__button" >
 		            <span class="mdl-radio__label">Hopital</span>
 		         </label>
-			  </td> 
+			  </td>
 	      </tr>
-	   </table>   
+	   </table>
 
 			  </div>
-			</div>	
-	    </div>		  
+			</div>
+	    </div>
 	  <main class="mdl-layout__content">
 
-	    <div class="page-content mdl-container"> 
+	    <div class="page-content mdl-container">
 
-	    <!-- START search results-->				 
+	    <!-- START search results-->
 			<div id="search_bar_results" class="mdl-layout--large-screen-only mdl-container search_bar_results" style="display: none">
 
-			</div>	
+			</div>
 			<!-- END search results-->
 
 			<div id="_main" class="mdl-grid container">
@@ -121,7 +142,7 @@
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename"><a href="comprendre.html">Comprendre</a></span>
 					  </div>
-					</div>	
+					</div>
 			  </div>
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp se_proteger">
@@ -129,7 +150,7 @@
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename"><a href="se_proteger.html">Se protéger</a></span>
 					  </div>
-					</div>		  	
+					</div>
 			  </div>
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp diagnostiquer">
@@ -137,7 +158,7 @@
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename"><a href="diagnostiquer.html">Diagnostiquer</a></span>
 					  </div>
-					</div>		  	
+					</div>
 			  </div>
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp se_soigner">
@@ -145,15 +166,15 @@
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename"><a href="se_soigner.html">Se soigner</a></span>
 					  </div>
-					</div>		  	
-			  </div>	
+					</div>
+			  </div>
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp pharmacie">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename"><a href="adresse.html">Recherche</a></span>
 					  </div>
-					</div>	
+					</div>
 			  </div>
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp questions">
@@ -161,7 +182,7 @@
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename"><a href="question_reponse.html">Questions / Réponses</a></span>
 					  </div>
-					</div>		  	
+					</div>
 			  </div>
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp quiz">
@@ -169,7 +190,7 @@
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename"><a href="quiz_start.html">Jouer : Le quiz</a></span>
 					  </div>
-					</div>		  	
+					</div>
 			  </div>
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp chasse">
@@ -177,7 +198,7 @@
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename"><a href="chasse_para_start.html">Jouer : Chasse aux parasites</a></span>
 					  </div>
-					</div>		  	
+					</div>
 			  </div>
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp chasse">
@@ -185,15 +206,15 @@
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename"><a href="palu_vous_start.html">Le paludisme et vous</a></span>
 					  </div>
-					</div>		  	
-			  </div>			  
+					</div>
+			  </div>
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet mdl-cell--hide-phone mdl-cell--hide-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp comment">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename"><a href="comment.html">Comment ?</a></span>
 					  </div>
-					</div>		  	
+					</div>
 			  </div>
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet mdl-cell--hide-phone mdl-cell--hide-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp qui">
@@ -201,31 +222,31 @@
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename"><a href="qui.html">Qui ?</a></span>
 					  </div>
-					</div>		  	
-			  </div>		
+					</div>
+			  </div>
 			</div>
-	    
+
 		</div>
 
-	    <div class="page-content mdl-container">	
-			<div class="mdl-grid container">	
+	    <div class="page-content mdl-container">
+			<div class="mdl-grid container">
 	  			<footer class="mdl-mini-footer mdl-layout--large-screen-only">
 				  <div class="mdl-mini-footer__left-section">
 				    <ul class="mdl-mini-footer__link-list">
 				      <li><a href="#">Fongwama - 2017</a></li>
 				    </ul>
 				  </div>
-				</footer>	
+				</footer>
 			</div>
-	    </div>  
+	    </div>
 
 
 
-		    
+
 	  </main>
 
 	</div>
-		
+
 <!-- inclusion  des fichiers javascript -->
 <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 
@@ -233,5 +254,7 @@
 <script type="text/javascript" src="data/places_db.json"></script>
 <script type="text/javascript" src="data/places_hospital_db.json"></script>
 <script type="text/javascript" src="js/adresses_search.js"></script>
+<script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+<script type="text/javascript" src="js/material.min.js"></script>
 </body>
 </html>
