--- a/quiz_play.html
+++ b/quiz_play.html
@@ -21,10 +21,15 @@
 
 	<!-- Always shows a header, even in smaller screens. -->
 	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+		<div aria-expanded="false" role="button" tabindex="0" class="mdl-layout__drawer-button">
+			<i class="fa fa-bars"></i>
+
+		</div>
 	  <header class="mdl-layout__header">
 	    <div class="mdl-layout__header-row">
 	      <!-- Title -->
-	      <span class="mdl-logo"><a href="index.html"><img src="img/logo.png" alt=""></a></span>
+	      <span class="mdl-logo"><a href="index.html"><img src="img/logo.png" alt=""></a>
+	      </span>
 	      <!-- Add spacer, to align navigation to the right -->
 	      <div class="mdl-layout-spacer"></div>
 	      <!-- Navigation. We hide it in small screens. -->
@@ -41,12 +46,12 @@
 				    for="demo-menu-lower-right">
 				  <li class="mdl-menu__item"><a href="comment.html">Comment</a></li>
 				  <li class="mdl-menu__item"><a href="qui.html">A propos</a></li>
-				</ul>				
-			</div>	
+				</ul>
+			</div>
 	      <!-- Navigation. We hide it in small screens. -->
 	      <nav class="mdl-navigation mdl-layout--large-screen-only">
 	        <a class="mdl-navigation__link" href="adresse.html">Rechercher une pharmacie/CSi</a>
-	        <a class="mdl-navigation__link" href="adresse_near.html">La plus proche de moi</a>	        
+	        <a class="mdl-navigation__link" href="adresse_near.html">La plus proche de moi</a>
 	        <a class="mdl-navigation__link" href="ajout_pharma.html">Ajouter un centre de santé</a>
 	        <a class="mdl-navigation__link" href="comment.html">Comment ?</a>
 	        <a class="mdl-navigation__link" href="qui.html">A propos</a>
@@ -54,18 +59,35 @@
 	    </div>
 	  </header>
 	  <div class="mdl-layout__drawer">
-	    <span class="mdl-layout-title"><img src="img/logo2.png" alt="EduPalu logo"></span>
+	    <span class="mdl-layout-title"><img src="img/logo2.png" alt=""></span>
 	    <nav class="mdl-navigation">
-	      <a class="mdl-navigation__link" href="comprendre.html"><i class="material-icons">description</i>Comprendre</a>
-	      <a class="mdl-navigation__link" href="se_proteger.html"><i class="material-icons">warning</i>Se protéger</a>
-	      <a class="mdl-navigation__link" href="diagnostiquer.html"><i class="material-icons">find_in_page</i>Diagnostiquer</a>	      
-	      <a class="mdl-navigation__link" href=""><i class="material-icons">healing</i>Se soigner</a>
-	      <a class="mdl-navigation__link" href="adresse.html"><i class="material-icons">search</i>Rechecher </a>	    	      
-	      <a class="mdl-navigation__link" href="question_reponse.html"><i class="material-icons">forum</i>Questions / Réponses</a>
-	      <a class="mdl-navigation__link" href="quiz_play.html"><i class="material-icons">games</i>Le quiz</a>
-	      <a class="mdl-navigation__link" href=""><i class="material-icons">extension</i>Chasse aux parasites</a>	      			     
-	      <a class="mdl-navigation__link" href="comment.html"><i class="material-icons">copyright</i>Comment ?</a>
-	      <a class="mdl-navigation__link" href="qui.html"><i class="material-icons">info</i> A propos</a>
+	      <a class="mdl-navigation__link" href="comprendre.html"><i style="font-size:1.6em;" class="material-icons fa fa-file"></i> Comprendre</a>
+	      <a class="mdl-navigation__link" href="se_proteger.html"><i style="font-size:1.6em;" class="material-icons fa fa-exclamation-triangle"></i> Se protéger</a>
+
+	      <a class="mdl-navigation__link" href="diagnostiquer.html">
+	      	<i style="font-size:1.6em;" class="material-icons fa fa-stethoscope"></i> Diagnostiquer</a>
+
+	      <a class="mdl-navigation__link" href="se_soigner.html">
+			<i style="font-size:1.6em;" class="material-icons fa fa-heart"></i>
+	       Se soigner</a>
+	      <a class="mdl-navigation__link" href="adresse.html">
+			<i style="font-size:1.6em;" class="material-icons fa fa-search"></i>
+	      Rechecher </a>
+	      <a class="mdl-navigation__link" href="question_reponse.html">
+	      	<i style="font-size:1.6em;" class="material-icons fa fa-comments"></i>
+	      Questions / Réponses</a>
+	      <a class="mdl-navigation__link" href="quiz_play.html"><i style="font-size:1.6em;" class="material-icons fa fa-gamepad"></i>
+	      Le quiz</a>
+	      <a class="mdl-navigation__link" href="chasse_para_start.html">
+	      <i style="font-size:1.6em;" class="material-icons fa fa-puzzle-piece"></i>
+	  	Chasse aux parasites</a>
+	      <a class="mdl-navigation__link" href="comment.html">
+	      	<i style="font-size:1.6em;" class="material-icons fa fa-copyright"></i>
+
+	      Comment ?</a>
+	      <a class="mdl-navigation__link" href="qui.html">
+			<i style="font-size:1.6em;" class="material-icons fa fa-info"></i>
+	        A propos</a>
 	    </nav>
 	  </div>  
 	    <div class="page-content">	
@@ -144,5 +166,8 @@
 <script type="text/javascript" src="data/places_db.json"></script>
 <script type="text/javascript" src="data/places_hospital_db.json"></script>
 <script type="text/javascript" src="js/adresses_search.js"></script>
+<script type="text/javascript" src="js/fontawesome-all.min.js"></script>	
+<script type="text/javascript" src="js/material.min.js"></script>
+
 </body>
 </html>
