set search result to be displayed on alll screen size

--- a/adresse_near.html
+++ b/adresse_near.html
@@ -94,7 +94,7 @@
 	    <div class="page-content mdl-container">	
 			
 			<!-- START search results-->				 
-			<div id="search_bar_results" class="mdl-layout--large-screen-only mdl-container search_bar_results" style="display: none">
+			<div id="search_bar_results" class="mdl-container search_bar_results" style="display: none">
 
 			</div>	
 			<!-- END search results-->
@@ -113,7 +113,7 @@
 	                        </div>
 
 	                         <div class="panel-body">
-	                            <div id="results" class="mdl-layout--large-screen-only search_bar_results">
+	                            <div id="results" class="search_bar_results">
 																
 															</div>
 	                        </div>
