le palu et vous card hidden for later update

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 					  </div>
 					</div>		  	
 			  </div>
-			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet hidden">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp chasse">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
