--- a/comprendre.html
+++ b/comprendre.html
@@ -101,7 +101,7 @@
 			<div id="_main" class="mdl-grid mdl-container">
 				<h4 class="container_title">C'est quoi le paludisme ?</h4>
 					<img src="img/labo.jpg" alt="Laboratoire de campagne" class="ful_img" />
-
+					<img class="blog-post__img" src="img/labo.jpg" alt="New re:Work guides on innovation">
 					<div class="text_container">
 						<div class="mdl-container_text">	
 
