images big fixed,

--- a/comprendre.html
+++ b/comprendre.html
@@ -100,8 +100,11 @@
 			<!-- END search results-->
 			<div id="_main" class="mdl-grid mdl-container">
 				<h4 class="container_title">C'est quoi le paludisme ?</h4>
-					<img src="img/labo.jpg" alt="Laboratoire de campagne" class="ful_img" />
-					<img class="blog-post__img" src="img/labo.jpg" alt="New re:Work guides on innovation">
+									<div class="demo-card-square mdl-card mdl-shadow--2dp main_size">
+									  <div class="mdl-card__title mdl-card--expand main_comprendre">
+									    <h2 class="mdl-card__title-text"></h2>
+									  </div>
+									</div>						
 					<div class="text_container">
 						<div class="mdl-container_text">	
 
