--- a/diagnostiquer.html
+++ b/diagnostiquer.html
@@ -100,7 +100,11 @@
 			<!-- END search results-->
 			<div id="_main" class="mdl-grid mdl-container">
 				<h4 class="container_title">Diagnostiquer le paludisme</h4>
-					<img src="img/technicien_microscope.jpg" alt="Laboratoire de campagne" class="full_img" />
+									<div class="demo-card-square mdl-card mdl-shadow--2dp main_size">
+									  <div class="mdl-card__title mdl-card--expand main_diagnostiquer">
+									    <h2 class="mdl-card__title-text"></h2>
+									  </div>
+									</div>	
 					<div class="text_container">
 						<div class="mdl-container_text">	
 						    <h4>Une ancienne maladie</h4>
