--- a/se_soigner.html
+++ b/se_soigner.html
@@ -98,8 +98,12 @@
 			</div>	
 			<!-- END search results-->
 			<div id="_main" class="mdl-grid mdl-container">
+									<div class="demo-card-square mdl-card mdl-shadow--2dp main_size">
+									  <div class="mdl-card__title mdl-card--expand main_soigner">
+									    <h2 class="mdl-card__title-text"></h2>
+									  </div>
+									</div>
 				<h4 class="container_title">Soigner le paludisme</h4>
-					<img src="img/vaccin.jpg" alt="Vaccin" class="full_img" />
 					<div class="text_container">
 						<div class="mdl-container_text">	
 						     <h5>La chloroquine</h5>
