Mise à jour des membres

--- a/qui.html
+++ b/qui.html
@@ -114,7 +114,7 @@
 			</div> 
 
 			<p>
-            Prince Youlou, Delphin Bondongo, Aristide Ndielé, Trésor Ngassaki, Borel Badila, Steve Ndende, Pierre Poulain, Ricken Bazolo.
+            Prince Youlou,Ricken Bazolo,Christ KIVIDI,Orion WAMBERT,Alex BANZOUZI,,Steve Ndende, Pierre Poulain, .
             </p>          
 
 
