Mise à jour des membres

--- a/qui.html
+++ b/qui.html
@@ -114,7 +114,7 @@
 			</div> 
 
 			<p>
-            Prince Youlou,Ricken Bazolo,Christ KIVIDI,Orion WAMBERT,Alex BANZOUZI,,Steve Ndende, Pierre Poulain, .
+            Prince YOULOU,Ricken BAZOLO,Christ KIVIDI,Orion WAMBERT,Alex BANZOUZI,Dassin MOUELET,Negev MPASSI,Larges MOUANGA,Hyllarion LOULENDO,Noelly NGATOULA,Peter MFOUNDOU,Oriane BAYENDELA,Jodrey LEZA,Samael EVOKO,Dylan OPINA,Cerone AWANA.
             </p>          
 
 
